--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,24 +31,24 @@
         <Button
             android:id="@+id/buttonDelete"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
             android:onClick="onClick"
             android:text="Delete"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.23" />
+            app:layout_constraintTop_toBottomOf="@+id/buttonAddItem" />
 
         <Button
             android:id="@+id/buttonSaveList"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:onClick="onClick"
             android:text="Save List"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            tools:layout_editor_absoluteY="162dp" />
+            app:layout_constraintTop_toBottomOf="@+id/buttonDelete" />
 
     </android.support.constraint.ConstraintLayout>
 
